--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: '맑은 고딕', sans-serif;
-      background: #f2f6fa;
+      background: #f2f6fb;
     }
     .poem-container {
       max-width: 600px;
@@ -52,7 +52,7 @@
     <div class="poem-title">풀꽃</div>
     <div>
       <p>
-        자세히 보아야<br>
+        점심 먹고 싶어라<br>
         예쁘다<br>
         오래 보아야<br>
         사랑스럽다<br>
